--- a/pokedexApplication/Base.lproj/Main.storyboard
+++ b/pokedexApplication/Base.lproj/Main.storyboard
@@ -42,7 +42,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="B55-nL-aT7">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PokeCell" id="B55-nL-aT7" customClass="PokeCell" customModule="pokedexApplication" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -74,6 +74,10 @@
                                             <constraint firstItem="5Ot-vu-eSP" firstAttribute="leading" secondItem="B55-nL-aT7" secondAttribute="leading" id="fcl-yM-Er5"/>
                                             <constraint firstAttribute="trailing" secondItem="EwQ-zK-Fq2" secondAttribute="trailing" id="vDa-wH-OX0"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="nameLabel" destination="5Ot-vu-eSP" id="kHm-dB-ts7"/>
+                                            <outlet property="thumbnailImage" destination="EwQ-zK-Fq2" id="Bra-Kw-pqB"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -102,7 +106,6 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OpV-6V-rNl" secondAttribute="bottom" constant="20" id="dWr-cI-nec"/>
                             <constraint firstAttribute="trailing" secondItem="yWR-lb-wZQ" secondAttribute="trailing" id="eW8-U0-pup"/>
                             <constraint firstAttribute="trailing" secondItem="yWR-lb-wZQ" secondAttribute="trailing" id="iNk-IB-Ygr"/>
-                            <constraint firstItem="OpV-6V-rNl" firstAttribute="top" secondItem="EuP-ss-sYL" secondAttribute="bottom" id="kgq-xg-jgJ"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Qle-y2-7ve" secondAttribute="bottom" id="pag-oW-oGe"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="OpV-6V-rNl" secondAttribute="bottom" constant="20" id="sct-O5-ash"/>
                             <constraint firstItem="OpV-6V-rNl" firstAttribute="top" secondItem="EuP-ss-sYL" secondAttribute="bottom" constant="20" id="tS7-z4-LN0"/>
@@ -112,6 +115,9 @@
                             <constraint firstItem="OpV-6V-rNl" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="zfT-LQ-ryB"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="collection" destination="OpV-6V-rNl" id="0sQ-cB-JGq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
